src/test/deca/syntax/valid/test_synt/variables/variables_print_2.deca
// Description:
//    Test de print de 2 variables apres avoir les introduits et leur assignée des valeurs 
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur 
//
// Historique:
//    cree le 11/01/2022

{
    int x ;   
    x = 5  ;
    int y ; 
    y = 6 ;
   println( x + y);
}